Compressible Duct Flow Control (first working version)

--- a/phSolver/common/input.config
+++ b/phSolver/common/input.config
@@ -16,10 +16,15 @@
 
 FLOW CONTROL PARAMETERS
 {
+     Duct Geometry Type : 0   # flag for geometry specific modeling 0 is safe
+     Duct Outlet ID : 0   #If active, give it the surfID of the outlet
+            Duct Uniform Outlet Pressure: NODEFAULT   # outPres1 must be set IFF above not zero
+
 #inlet boundary conditions
      Take BC from IC at Inlet : 0 # iI2Binlet, give the surf ID which want to use taking BC from IC
      Inlet Bulk x Velocity: NODEFAULT  # inletVelX
 #outlet pressure
+# the next pair seem to be redundent/obsolete...figure out why we needed Duct Outlet???
      Set Outlet Pressure: 0 # isetOutPres, give the surf ID which want to be set 
      Uniform Outlet Pressure: NODEFAULT  # outPres1
 #initial condition
@@ -30,6 +35,51 @@ FLOW CONTROL PARAMETERS
      Initial Temp: NODEFAULT       #temp_ini
      Initial Pressure: NODEFAULT   #pres_ini
      Initial Scalar 1: NODEFAULT   #evis_ini
+#initial condition eddy viscosity ramp
+     Specify Initial Eddy Viscosity Ramp: 0
+     Initial Scalar 1 ramp start: NODEFAULT
+     Initial Scalar 1 ramp end:   NODEFAULT
+     Initial Scalar 1 low:        NODEFAULT
+     Initial Scalar 1 high:       NODEFAULT
+#initial condition for Duct
+     Set Initial Condition for Duct : 0 #isetInitial_Duct
+#inlet condition for Duct
+     Set Inlet Condition for Duct : 0  #isetInlet_Duct
+#blowing condition for Duct
+     Set Blowing Condition for Duct:0 #isetBlowing_Duct
+
+#suction condition for Duct
+     Duct Set Suction Surface ID:            0    #isetSuctionID_Duct - suction patch surface IDs
+# note the zero previous causes the below not to be read but we include what would
+# be read for completeness 
+     Duct Bottom Suction Normal Velocity:     NODEFAULT    #suctionVbottom
+     Duct Lower Side Suction Normal Velocity: NODEFAULT  #suctionVside_lower
+     Duct Upper Side Surface Normal Velocity: NODEFAULT  #suctionVside_upper
+     Duct Top Surface Normal Velocity:        NODEFAULT    #suctionVtop
+
+
+     Number of Blower Surfaces:     0
+# note the zero previous causes the below not to be read but we include what would
+# be read for completeness.  If number of blower surfaces was 2 there would be two
+# columns like you see below.
+     Blower Enable:                 0       0      #set greater than 0 to enable
+     Blower Surface ID:             802     803    
+     Blower Mode:                   0       0      #constant = 0, trapezoid = 1, sinusoid = 2
+     Blower Cycle Period:           -1      0.010  #s   set less than zero or greater than 1 to use constant blowing
+     Blower Full On Period:         -1      0.000  #s 
+     Blower Rise Time:              -1      0.004  #s
+     Blower Fall Time:              -1      0.004  #s
+     Blower Maximum u_normal:       1.62    28.56  #m/s
+     Blower Minimum u_normal:       0.0     0.0    #m/s
+     Blower Temperature:            305     305    #K
+     Blower Eddy Viscosity:         1.6e-3  1.6e-3 #m^2/s
+     Blower BL Thickness:           0.001   0.001
+     Blower BL Thickness (scalar):  0.0005  0.0005
+
+#eddy viscosity control
+     Override Eddy Viscosity:                0			#ctrlvari.isetEV_IC_BC
+     Eddy Viscosity Value for Override:      NODEFAULT	#ctrlvar.evis_IC_BC
+
 }
 
 SOLUTION CONTROL
@@ -203,6 +253,8 @@ DISCRETIZATION CONTROL
      Quadrature Rule on Boundary: 2           #intb(1)
      Number of Elements Per Block: 64        #ibksiz
      Entropy Form of Pressure Constraint on Weight Space: 0  # 1 turns it on
+
+     LHS BC heat flux enable: 0
 }
 
 SOLUTION SCALING PARAMETERS
