First compiling version of PETSc merged with Compressible Duct Flow Control (does not run properly)

--- a/phSolver/CMakeLists.txt
+++ b/phSolver/CMakeLists.txt
@@ -2,6 +2,16 @@ project(phSolver)
 set(CMAKE_Fortran_MODULE_DIRECTORY ${phSolver_BINARY_DIR}/modules)
 include_directories(${CMAKE_Fortran_MODULE_DIRECTORY})
 
+option(PHASTA_USE_PETSC "Use PETSc GMRES Solver" ON)
+if(PHASTA_USE_PETSC)
+find_package(PETSc REQUIRED)
+find_path(PETSC_INC petscsys.h HINTS /usr/include ${PETSC_PACKAGE_INCLUDES})
+find_path(PETSC_LIB libpetsc.a HINTS /usr/lib ${PETSC_PACKAGE_INCLUDES}../lib)
+include_directories(${PETSC_PACKAGE_INCLUDES} ${PETSC_INC})
+link_directories(${PETSC_LIB})
+add_definitions(-DHAVE_PETSC)
+endif(PHASTA_USE_PETSC)
+
 add_subdirectory(common)
 option(PHASTA_INCOMPRESSIBLE "Build the incompressible solver" OFF)
 option(PHASTA_COMPRESSIBLE "Build the compressible solver" ON)
