--- a/phSolver/compressible/CMakeLists.txt
+++ b/phSolver/compressible/CMakeLists.txt
@@ -10,6 +10,8 @@ set_target_properties(phastaC.exe PROPERTIES HAS_CXX TRUE)
 set_target_properties(compressible PROPERTIES HAS_CXX TRUE)
 set_target_properties(phastaC.exe PROPERTIES LINKER_LANGUAGE Fortran)
 set_target_properties(compressible PROPERTIES LINKER_LANGUAGE Fortran)
+
+
 if(PHASTA_USE_MPI)
 	target_link_libraries(phastaC.exe ${MPI_LIBRARIES} ${MPI_Fortran_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT} common compressible phMetis common phMetis phastaIO)
 endif(PHASTA_USE_MPI)
@@ -20,3 +22,7 @@ if(PHASTA_BUILD_PHSHAPE)
 	target_link_libraries(phastaC.exe phshape)
 endif(PHASTA_BUILD_PHSHAPE)
 target_link_libraries(phastaC.exe compressible)
+if(PHASTA_USE_PETSC)
+	#target_link_libraries(phastaC.exe ${PETSC_LIB}/libpetsc.a ${PETSC_PACKAGE_LIBS})
+	target_link_libraries(phastaC.exe petsc ${PETSC_PACKAGE_LIBS})
+endif()
