remove unused include dir

--- a/phSolver/compressible/CMakeLists.txt
+++ b/phSolver/compressible/CMakeLists.txt
@@ -4,7 +4,7 @@ add_library(compressible ${SRC_FILES})
 if(PHASTA_USE_MPI)
 	include_directories(${MPI_INCLUDE_PATH} ${MPI_Fortran_INCLUDE_PATH})
 endif(PHASTA_USE_MPI)
-include_directories(${PHASTA_BINARY_DIR}/include ${PHASTA_BINARY_DIR})
+include_directories(${PHASTA_BINARY_DIR})
 add_executable(phastaC.exe main.c)
 set_target_properties(phastaC.exe PROPERTIES HAS_CXX TRUE)
 set_target_properties(compressible PROPERTIES HAS_CXX TRUE)
