--- a/phSolver/incompressible/CMakeLists.txt
+++ b/phSolver/incompressible/CMakeLists.txt
@@ -5,7 +5,7 @@ find_library(ACUSOLVE_LIB libles)
 if(PHASTA_USE_MPI)
 	include_directories(${MPI_INCLUDE_PATH} ${MPI_Fortran_INCLUDE_PATH})
 endif(PHASTA_USE_MPI)
-include_directories(${PHASTA_BINARY_DIR}/include ${PHASTA_BINARY_DIR})
+include_directories(${PHASTA_BINARY_DIR})
 add_executable(phastaIC.exe main.c)
 set_target_properties(phastaIC.exe PROPERTIES HAS_CXX TRUE)
 set_target_properties(incompressible PROPERTIES HAS_CXX TRUE)
