--- a/phSolver/compressible/CMakeLists.txt
+++ b/phSolver/compressible/CMakeLists.txt
@@ -11,7 +11,7 @@ set_target_properties(compressible PROPERTIES HAS_CXX TRUE)
 set_target_properties(phastaC.exe PROPERTIES LINKER_LANGUAGE Fortran)
 set_target_properties(compressible PROPERTIES LINKER_LANGUAGE Fortran)
 if(PHASTA_USE_MPI)
-	target_link_libraries(phastaC.exe ${MPI_LIBRARIES} ${MPI_Fortran_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT} common compressible phMetis common phMetis phastaIO)
+	target_link_libraries(phastaC.exe ${MPI_LIBRARIES} ${MPI_Fortran_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT} common compressible common phastaIO)
 endif(PHASTA_USE_MPI)
 if(PHASTA_BUILD_SHAPEFUNCTION)
 	target_link_libraries(phastaC.exe shapeFunction)
