test for posix and sync io header reading

--- a/phSolver/common/CMakeLists.txt
+++ b/phSolver/common/CMakeLists.txt
@@ -9,3 +9,5 @@ endif(PHASTA_USE_MPI)
 ADD_LIBRARY(common ${SRC_FILES})
 TARGET_LINK_LIBRARIES(common ${MPI_LIBRARIES})
 TARGET_LINK_LIBRARIES(common ${MPI_Fortran_LIBRARIES})
+
+add_subdirectory(test)
