--- a/phSolver/common/test/CMakeLists.txt
+++ b/phSolver/common/test/CMakeLists.txt
@@ -6,6 +6,6 @@ endmacro(setup_exe)
 include_directories("${PHASTA_BINARY_DIR}")
 
 setup_exe(phIOreadheader phIOreadheader.cc)
-setup_exe(phIOwriteheader phIOwriteheader.cc)
 setup_exe(phIOreaddatablock phIOreaddatablock.cc)
+setup_exe(phIOwrite phIOwrite.cc)
 include(testing.cmake)
