test for calling phio fns from fortran
this does not work

--- a/phSolver/common/test/CMakeLists.txt
+++ b/phSolver/common/test/CMakeLists.txt
@@ -8,4 +8,5 @@ include_directories("${PHASTA_BINARY_DIR}")
 setup_exe(phIOreadheader phIOreadheader.cc)
 setup_exe(phIOreaddatablock phIOreaddatablock.cc)
 setup_exe(phIOwrite phIOwrite.cc)
+setup_exe(phIOwriteFtn phIOwrite.F90)
 include(testing.cmake)
