link with fortran compiler

--- a/phSolver/common/test/CMakeLists.txt
+++ b/phSolver/common/test/CMakeLists.txt
@@ -8,5 +8,6 @@ include_directories("${PHASTA_BINARY_DIR}")
 setup_exe(phIOreadheader phIOreadheader.cc)
 setup_exe(phIOreaddatablock phIOreaddatablock.cc)
 setup_exe(phIOwrite phIOwrite.cc)
-setup_exe(phIOwriteFtn phIOwrite.F90)
+setup_exe(phIOwriteFtn phIOwrite.f)
+set_property(TARGET phIOwriteFtn PROPERTY LINKER_LANGUAGE Fortran)
 include(testing.cmake)
