--- a/phSolver/common/test/CMakeLists.txt
+++ b/phSolver/common/test/CMakeLists.txt
@@ -4,10 +4,12 @@ macro(setup_exe exename srcname)
 endmacro(setup_exe)
 
 include_directories("${PHASTA_BINARY_DIR}")
+include_directories(${CMAKE_Fortran_MODULE_DIRECTORY})
 
 setup_exe(phIOreadheader phIOreadheader.cc)
 setup_exe(phIOreaddatablock phIOreaddatablock.cc)
 setup_exe(phIOwrite phIOwrite.cc)
-setup_exe(phIOwriteFtn phIOwrite.f)
-set_property(TARGET phIOwriteFtn PROPERTY LINKER_LANGUAGE Fortran)
+set(ftnsrc chdir_mod.f phIOreadheader.f)
+setup_exe(phIOreadheaderFtn "${ftnsrc}")
+set_property(TARGET phIOreadheaderFtn PROPERTY LINKER_LANGUAGE Fortran)
 include(testing.cmake)
