--- a/phSolver/common/test/CMakeLists.txt
+++ b/phSolver/common/test/CMakeLists.txt
@@ -9,7 +9,7 @@ include_directories(${CMAKE_Fortran_MODULE_DIRECTORY})
 setup_exe(phIOreadheader phIOreadheader.cc)
 setup_exe(phIOreaddatablock phIOreaddatablock.cc)
 setup_exe(phIOwrite phIOwrite.cc)
-set(ftnsrc chdir_mod.f phIOreadheader.f)
-setup_exe(phIOreadheaderFtn "${ftnsrc}")
-set_property(TARGET phIOreadheaderFtn PROPERTY LINKER_LANGUAGE Fortran)
+set(ftnsrc chdir_mod.f phIOread.f)
+setup_exe(phIOreadFtn "${ftnsrc}")
+set_property(TARGET phIOreadFtn PROPERTY LINKER_LANGUAGE Fortran)
 include(testing.cmake)
