--- a/phSolver/common/test/CMakeLists.txt
+++ b/phSolver/common/test/CMakeLists.txt
@@ -12,4 +12,6 @@ setup_exe(phIOwrite phIOwrite.cc)
 set(ftnsrc chdir_mod.f phIOread.f)
 setup_exe(phIOreadFtn "${ftnsrc}")
 set_property(TARGET phIOreadFtn PROPERTY LINKER_LANGUAGE Fortran)
+setup_exe(phIOwriteFtn phIOwrite.f)
+set_property(TARGET phIOwriteFtn PROPERTY LINKER_LANGUAGE Fortran)
 include(testing.cmake)
