PHASTA_TESTING=ON to enable compilation of test drivers

--- a/phSolver/common/CMakeLists.txt
+++ b/phSolver/common/CMakeLists.txt
@@ -10,6 +10,6 @@ ADD_LIBRARY(common ${SRC_FILES})
 TARGET_LINK_LIBRARIES(common ${MPI_LIBRARIES})
 TARGET_LINK_LIBRARIES(common ${MPI_Fortran_LIBRARIES})
 
-if(IS_TESTING)
+if(PHASTA_TESTING)
   add_subdirectory(test)
-endif(IS_TESTING)
+endif(PHASTA_TESTING)
