--- a/phSolver/compressible/CMakeLists.txt
+++ b/phSolver/compressible/CMakeLists.txt
@@ -21,4 +21,6 @@ if(PHASTA_BUILD_PHSHAPE)
 endif(PHASTA_BUILD_PHSHAPE)
 target_link_libraries(phastaC.exe compressible)
 
-add_subdirectory(test)
+if(PHASTA_TESTING)
+  add_subdirectory(test)
+endif(PHASTA_TESTING)
