working on syncio support via phIO.h

--- a/checkphasta/CMakeLists.txt
+++ b/checkphasta/CMakeLists.txt
@@ -1,2 +1,2 @@
 add_executable(checkphasta checkphasta.cpp)
-target_link_libraries(checkphasta phastaIO ${MPI_LIBRARIES})
+target_link_libraries(checkphasta common phastaIO ${MPI_LIBRARIES})
