using phstream in phasta

--- a/phSolver/incompressible/CMakeLists.txt
+++ b/phSolver/incompressible/CMakeLists.txt
@@ -1,12 +1,12 @@
 file(GLOB SRC_FILES *.cc *.f *.f90 *.c)
-list(REMOVE_ITEM SRC_FILES "main.c")
+list(REMOVE_ITEM SRC_FILES "main.cc")
 add_library(incompressible ${SRC_FILES})
 find_library(ACUSOLVE_LIB libles)
 if(PHASTA_USE_MPI)
 	include_directories(${MPI_INCLUDE_PATH} ${MPI_Fortran_INCLUDE_PATH})
 endif(PHASTA_USE_MPI)
 include_directories(${PHASTA_BINARY_DIR})
-add_executable(phastaIC.exe main.c)
+add_executable(phastaIC.exe main.cc)
 set_target_properties(phastaIC.exe PROPERTIES HAS_CXX TRUE)
 set_target_properties(incompressible PROPERTIES HAS_CXX TRUE)
 set_target_properties(phastaIC.exe PROPERTIES LINKER_LANGUAGE Fortran)
