--- a/phSolver/common/CMakeLists.txt
+++ b/phSolver/common/CMakeLists.txt
@@ -1,14 +1,33 @@
 
 # collect all the source files
 FILE(GLOB SRC_FILES *.cc *.f *.f90 *.c *.F90)
-#FIND_PACKAGE(MPI REQUIRED)   
+#FIND_PACKAGE(MPI REQUIRED)
 if(PHASTA_USE_MPI)
 	add_definitions(-DOMPI_SKIP_MPICXX=1)
 	include_directories(${MPI_INCLUDE_PATH} ${MPI_Fortran_INCLUDE_PATH})
 endif(PHASTA_USE_MPI)
+
+set(COMMON_DEP_LIBS)
+set(COMMON_INCLUDE_DIRS)
+if(PHASTA_CHEF_ENABLED)
+  set(COMMON_DEP_LIBS ${COMMON_DEP_LIBS} phstream)
+  set(COMMON_INCLUDE_DIRS
+    ${COMMON_INCLUDE_DIRS}
+    ${PHASTACHEF_SOURCE_DIR}/phstream
+  )
+else()
+  set(SRC_FILES ${SRC_FILES} phstreamEmpty/phsEmpty.cc)
+  set(COMMON_INCLUDE_DIRS ${COMMON_INCLUDE_DIRS} phstreamEmpty)
+endif()
+
+include_directories(${COMMON_INCLUDE_DIRS})
 ADD_LIBRARY(common ${SRC_FILES})
+TARGET_LINK_LIBRARIES(common ${COMMON_DEP_LIBS})
 TARGET_LINK_LIBRARIES(common ${MPI_LIBRARIES})
 TARGET_LINK_LIBRARIES(common ${MPI_Fortran_LIBRARIES})
+
+set(PHASTA_INCLUDE_DIRS ${PHASTA_INCLUDE_DIRS} ${COMMON_INCLUDE_DIRS})
+set(PHASTA_LIBS ${PHASTA_LIBS} ${COMMON_DEP_LIBS})
 
 if(PHASTA_TESTING)
   add_subdirectory(test)
