compressible calling C++ phasta fn

--- a/phSolver/compressible/CMakeLists.txt
+++ b/phSolver/compressible/CMakeLists.txt
@@ -1,11 +1,11 @@
 file(GLOB SRC_FILES *.cc *.f *.f90 *.c)
-list(REMOVE_ITEM SRC_FILES "main.c")
+list(REMOVE_ITEM SRC_FILES "main.cc")
 add_library(compressible ${SRC_FILES})
 if(PHASTA_USE_MPI)
 	include_directories(${MPI_INCLUDE_PATH} ${MPI_Fortran_INCLUDE_PATH})
 endif(PHASTA_USE_MPI)
 include_directories(${PHASTA_BINARY_DIR})
-add_executable(phastaC.exe main.c)
+add_executable(phastaC.exe main.cc)
 set_target_properties(phastaC.exe PROPERTIES HAS_CXX TRUE)
 set_target_properties(compressible PROPERTIES HAS_CXX TRUE)
 set_target_properties(phastaC.exe PROPERTIES LINKER_LANGUAGE Fortran)
