--- a/phSolver/compressible/CMakeLists.txt
+++ b/phSolver/compressible/CMakeLists.txt
@@ -2,6 +2,7 @@ file(GLOB SRC_FILES *.cc *.f *.f90 *.c)
 list(REMOVE_ITEM SRC_FILES "main.cc")
 find_package(phastaCommon REQUIRED PATHS ${CMAKE_BINARY_DIR})
 set(PHASTAC_LIBS ${CMAKE_THREAD_LIBS_INIT} ${PHASTA_COMMON_LIBS})
+set(PHASTAC_INCLUDE_DIRS)
 
 add_library(compressible ${SRC_FILES})
 
@@ -15,6 +16,11 @@ set_target_properties(phastaC.exe PROPERTIES HAS_CXX TRUE)
 set_target_properties(compressible PROPERTIES HAS_CXX TRUE)
 set_target_properties(phastaC.exe PROPERTIES LINKER_LANGUAGE Fortran)
 set_target_properties(compressible PROPERTIES LINKER_LANGUAGE Fortran)
+#ughhhhh
+set(PHASTAC_LIBS 
+  compressible ${PHASTAC_LIBS} 
+  compressible ${PHASTAC_LIBS} 
+)
 set(PHASTAC_LIBS ${PHASTAC_LIBS} phastaIO)
 if(PHASTA_BUILD_SHAPEFUNCTION)
   set(PHASTAC_LIBS ${PHASTAC_LIBS} shapeFunction)
@@ -22,10 +28,11 @@ endif(PHASTA_BUILD_SHAPEFUNCTION)
 if(PHASTA_BUILD_PHSHAPE)
   set(PHASTAC_LIBS ${PHASTAC_LIBS} phshape)
 endif(PHASTA_BUILD_PHSHAPE)
-#ughhhhh
-target_link_libraries(phastaC.exe
-  compressible ${PHASTAC_LIBS}
-  compressible ${PHASTAC_LIBS}
+target_link_libraries(phastaC.exe ${PHASTAC_LIBS})
+
+configure_file(
+  "${CMAKE_CURRENT_SOURCE_DIR}/phastaCConfig.cmake.in"
+  "${CMAKE_BINARY_DIR}/phastaCConfig.cmake"
 )
 
 if(PHASTA_TESTING)
