--- a/phSolver/compressible/phastaCConfig.cmake.in
+++ b/phSolver/compressible/phastaCConfig.cmake.in
@@ -1,3 +1,3 @@
-SET(PHASTAC_LIBS compressible @PHASTAC_LIBS@ )
+SET(PHASTAC_LIBS @PHASTAC_LIBS@ )
 SET(PHASTAC_INCLUDE_DIRS @PHASTAC_INCLUDE_DIRS@ )
 SET(PHASTAC_FOUND TRUE )
