set C and IC include dir in config

--- a/phSolver/compressible/CMakeLists.txt
+++ b/phSolver/compressible/CMakeLists.txt
@@ -2,16 +2,15 @@ file(GLOB SRC_FILES *.cc *.f *.f90 *.c)
 list(REMOVE_ITEM SRC_FILES "main.cc")
 find_package(phastaCommon REQUIRED PATHS ${CMAKE_BINARY_DIR})
 set(PHASTAC_LIBS ${CMAKE_THREAD_LIBS_INIT} ${PHASTA_COMMON_LIBS})
-set(PHASTAC_INCLUDE_DIRS)
+set(PHASTAC_INCLUDE_DIRS
+  ${PHASTA_COMMON_INCLUDE_DIRS}
+  ${PHASTA_BINARY_DIR}
+)
 
 add_library(compressible ${SRC_FILES})
 
 add_executable(phastaC.exe main.cc)
-include_directories(
-  ${PHASTAC_INCLUDE_DIRS}
-  ${PHASTA_COMMON_INCLUDE_DIRS}
-  ${PHASTA_BINARY_DIR}
-)
+include_directories(${PHASTAC_INCLUDE_DIRS})
 set_target_properties(phastaC.exe PROPERTIES HAS_CXX TRUE)
 set_target_properties(compressible PROPERTIES HAS_CXX TRUE)
 set_target_properties(phastaC.exe PROPERTIES LINKER_LANGUAGE Fortran)
