added common dir to include config var

--- a/phSolver/common/CMakeLists.txt
+++ b/phSolver/common/CMakeLists.txt
@@ -5,6 +5,7 @@ set(PHASTA_COMMON_LIBS)
 if(PHASTA_USE_MPI)
   add_definitions(-DOMPI_SKIP_MPICXX=1)
   set(PHASTA_COMMON_INCLUDE_DIRS ${PHASTA_COMMON_INCLUDE_DIRS}
+    ${CMAKE_CURRENT_SOURCE_DIR}
     ${MPI_INCLUDE_PATH}
     ${MPI_Fortran_INCLUDE_PATH}
   )
