set num sync files from solver.inp
only applies to sync output mode - input does autodetection ... I may have broken it though since I think that call comes before the input.config file is read... doh

--- a/phSolver/common/input.config
+++ b/phSolver/common/input.config
@@ -96,6 +96,7 @@ MATERIAL PROPERTIES
 OUTPUT CONTROL
 {
      Number of Timesteps between Restarts: 500 #replaces nout/ntout
+     Number of SyncIO Files: 1        # nsynciofiles
      Verbosity Level: 3                        #replaces necho
      Print Statistics: False          #False=> ioform=1, True=> ioform=2
      Print Wall Fluxes: False         #No current action but it will come later
