dirty hack to support openmpi
common does this too....

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -70,7 +70,7 @@ SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY
 
 OPTION(PHASTA_USE_MPI "Build MPI components" ON)
 IF(PHASTA_USE_MPI)
-  ADD_DEFINITIONS( -DPARALLEL -DMPI -DMPICH_SKIP_MPICXX )
+  ADD_DEFINITIONS( -DPARALLEL -DMPI -DMPICH_SKIP_MPICXX -DOMPI_SKIP_MPICXX )
   FIND_PACKAGE(MPI REQUIRED)
 #  SET(CMAKE_MODULE_PATH ${PHASTA_SOURCE_DIR}/CMakeFiles)
   # bug in FIND_PACKAGE for Threads -- ignore for now (bug has been reported)...
