reasonably functional version of svLS solver that also links to leslib for comparison...note eps_outer hard coded to 40xeps_momentum_leslib as per svLS paper's suggestion

--- a/phSolver/incompressible/CMakeLists.txt
+++ b/phSolver/incompressible/CMakeLists.txt
@@ -1,3 +1,4 @@
+include_directories(${SVLS_INCLUDE_DIR})
 file(GLOB SRC_FILES *.cc *.f *.f90 *.c)
 list(REMOVE_ITEM SRC_FILES "main.cc")
 add_library(incompressible ${SRC_FILES})
@@ -29,11 +30,13 @@ endif(CMAKE_Fortran_COMPILER_ID MATCHES PGI)
 #and we need to serialize incompressible after common
 add_dependencies(incompressible common)
 find_library(ACUSOLVE_LIB libles)
+find_library(SVLS_LIB libsvLS)
 #ughhh
 set(PHASTAIC_LIBS
   ${PHASTA_COMMON_LIBS}
   incompressible
   ${ACUSOLVE_LIB}
+  ${SVLS_LIB}
   incompressible
   ${PHASTA_COMMON_LIBS}
 )
