Finally, we have all solvers in one branch, Compressible (Native/PETSc), Incompressible (leslib,svLS).  Note CmakeLists.txt needed to set shared libs to no after PETSc set it to yes and fouled link.

--- a/phSolver/compressible/Makefile
+++ b/phSolver/compressible/Makefile
@@ -76,7 +76,7 @@ else
 
 endif
 
-mods  := stats.f BCprofile.f mod_BCsfIDmap.f
+mods  := mod_timedata.f stats.f BCprofile.f mod_BCsfIDmap.f
 
 dirs := .
 DEPS := $(DEPS) phasta/phSolver/$(VERSION)/phSolver phasta/phastaIO phasta/phMetis\
