--- a/phSolver/compressible/CMakeLists.txt
+++ b/phSolver/compressible/CMakeLists.txt
@@ -37,7 +37,7 @@ endif(PHASTA_BUILD_PHSHAPE)
 target_link_libraries(phastaC.exe ${PHASTAC_LIBS})
 if(PHASTA_USE_PETSC)
 	#target_link_libraries(phastaC.exe ${PETSC_LIB}/libpetsc.a ${PETSC_PACKAGE_LIBS})
-	target_link_libraries(phastaC.exe petsc ${PETSC_PACKAGE_LIBS})
+	target_link_libraries(phastaC.exe ${PETSC_LIBRARIES})
 endif()
 configure_file(
   "${CMAKE_CURRENT_SOURCE_DIR}/phastaCConfig.cmake.in"
