--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -100,6 +100,12 @@ if(PHASTA_BUILD_PHSHAPE)
 endif(PHASTA_BUILD_PHSHAPE)
 endif(EXISTS ${PHASTA_SOURCE_DIR}/phShape)
 
+OPTION(PHASTA_BUILD_SVLS "Build svLS Linear Solver" ON)
+if(PHASTA_BUILD_SVLS)
+	list(APPEND PHASTA_INCLUDES "${PHASTA_SOURCE_DIR}/svLS")
+	add_subdirectory(svLS)
+endif(PHASTA_BUILD_SVLS)
+
 OPTION(PHASTA_BUILD_SOLVERS "Build Solvers" ON)
 if(PHASTA_BUILD_SOLVERS)
 	set(PHASTA_BUILD_PHASTAIO ON)
