make svLS disableable

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -100,7 +100,7 @@ if(PHASTA_BUILD_PHSHAPE)
 endif(PHASTA_BUILD_PHSHAPE)
 endif(EXISTS ${PHASTA_SOURCE_DIR}/phShape)
 
-OPTION(PHASTA_BUILD_SVLS "Build svLS Linear Solver" ON)
+OPTION(PHASTA_BUILD_SVLS "Build svLS Linear Solver" OFF)
 if(PHASTA_BUILD_SVLS)
 	list(APPEND PHASTA_INCLUDES "${PHASTA_SOURCE_DIR}/svLS")
 	add_subdirectory(svLS)
