--- a/phSolver/incompressible/CMakeLists.txt
+++ b/phSolver/incompressible/CMakeLists.txt
@@ -1,12 +1,22 @@
 file(GLOB SRC_FILES *.cc *.f *.f90 *.c)
 list(REMOVE_ITEM SRC_FILES "main.cc")
 
-if(PHASTA_BUILD_SVLS)
+option(PHASTA_USE_LESLIB "Use LESLIB Solver" OFF)
+
+if(PHASTA_USE_SVLS)
 	add_definitions(-DHAVE_SVLS)
 endif()
-if(ACUSOLVE_LIB)
-	add_definitions(-DHAVE_ACUSOLVE)
+
+if(PHASTA_USE_LESLIB)
+	add_definitions(-DHAVE_LESLIB)
+else()
+ list(REMOVE_ITEM SRC_FILES ${CMAKE_CURRENT_SOURCE_DIR}/usr.c )
+ list(REMOVE_ITEM SRC_FILES ${CMAKE_CURRENT_SOURCE_DIR}/getSol.c )
+ list(REMOVE_ITEM SRC_FILES ${CMAKE_CURRENT_SOURCE_DIR}/lestools.c )
+ list(REMOVE_ITEM SRC_FILES ${CMAKE_CURRENT_SOURCE_DIR}/lesSparse.f )
+ list(REMOVE_ITEM SRC_FILES ${CMAKE_CURRENT_SOURCE_DIR}/ftools.f )
 endif()
+
 
 add_library(incompressible ${SRC_FILES})
 
@@ -37,25 +47,38 @@ endif(CMAKE_Fortran_COMPILER_ID MATCHES PGI)
 #this is why we specify a module directory in the next cmakelists up
 #and we need to serialize incompressible after common
 add_dependencies(incompressible common)
-find_library(ACUSOLVE_LIB libles)
-if(PHASTA_BUILD_SVLS)
+if( PHASTA_USE_LESLIB AND PHASTA_USE_SVLS )
+message(STATUS "using SVLS and LESLIB")
 set(PHASTAIC_LIBS
   ${PHASTA_COMMON_LIBS}
   incompressible
-  ${ACUSOLVE_LIB}
+  ${LESLIB}
   svLS
   incompressible
   ${PHASTA_COMMON_LIBS}
 )
-else()
-set(PHASTAIC_LIBS
+
+elseif(PHASTA_USE_LESLIB) 
+message(STATUS "using LESLIB")
+  find_library(LESLIB libles)
+  set(PHASTAIC_LIBS
   ${PHASTA_COMMON_LIBS}
   incompressible
-  ${ACUSOLVE_LIB}
+  ${LESLIB}
   incompressible
   ${PHASTA_COMMON_LIBS}
 )
-endif(PHASTA_BUILD_SVLS)
+
+else(PHASTA_USE_SVLS)
+message(STATUS "using SVLS")
+set(PHASTAIC_LIBS
+  ${PHASTA_COMMON_LIBS}
+  incompressible
+  svLS
+  incompressible
+  ${PHASTA_COMMON_LIBS}
+)
+endif()
 
 set(PHASTAIC_LIBS ${PHASTAIC_LIBS} phastaIO)
 if(PHASTA_BUILD_SHAPEFUNCTION)
