--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,12 +31,16 @@ ENDIF(CMAKE_SYSTEM_NAME MATCHES BlueGeneQ-static)
 #SET(CMAKE_Fortran_SOURCE_FILE_EXTENSIONS f90 f F90 F)
 # stuff for C/C++ calls to Fortran -- still needs to be done properly...
 IF(CMAKE_Fortran_COMPILER_ID MATCHES GNU)
-  SET(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} -g -ffixed-form -ffixed-line-length-132 -cpp " )
+  SET(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} -ffixed-form -ffixed-line-length-132 -cpp " )
 ENDIF(CMAKE_Fortran_COMPILER_ID MATCHES GNU)
 
 IF(CMAKE_Fortran_COMPILER_ID MATCHES Intel)
 
-SET(CMAKE_Fortran_FLAGS "-g -O3 -W0 -ip -80 -fpp ${CMAKE_Fortran_FLAGS}" )
+SET(CMAKE_Fortran_FLAGS "-W0 -132 -fixed -fpp ${CMAKE_Fortran_FLAGS}" )
+if((CMAKE_BUILD_TYPE MATCHES "Release") OR 
+	(CMAKE_BUILD_TYPE MATCHES "RelWithDebInfo"))
+	set(CMAKE_Fortran_FLAGS "-O3 -ip ${CMAKE_Fortran_FLAGS}" )
+endif()
 message(STATUS "Found ifort")
 message(STATUS ${CMAKE_Fortran_FLAGS})
 ENDIF(CMAKE_Fortran_COMPILER_ID MATCHES Intel)
