IC working inviscid

--- a/phSolver/common/input.config
+++ b/phSolver/common/input.config
@@ -435,3 +435,13 @@ STEP SEQUENCE
     AMG Run Reduced Serial: 0            # <DEPRICATED> 0: no run, N: reduced serial if run serial; output information if parallel.
 }
 
+#NASA INLET
+#{
+     Apply Atmospheric Perturbation: 0 #BCdtKW =0 none, =1 pres, =2 AoA
+     Base Time Step of Perturbation: 100 #tsBase
+     Frequency of Pressure Perturbation: 1000 #PresFreq
+     Amplitude of Pressure Perturbation: 100 #PresAmp
+#     Frequency of AoA Perturbation: 1000 #AlphaFreq
+#     Amplitude of AoA Perturbation: 0.05 #AlphaAmp (degrees)
+#}
+
