Add a hook for bypassing find_package(MPI)
This is not a great idea, but seems to occasionally be useful when dealing with buggy (and mandatory!) compiler wrappers - particularly those provided by a certain well known HPC vendor. If you need this option, you owe one or more of:

1.) the PHASTA team
2.) your compiler vendor
3.) your MPI vendor
4.) your system vendor
5.) CMake

a bug report.

--- a/M2NFixBnd/CMakeLists.txt
+++ b/M2NFixBnd/CMakeLists.txt
@@ -2,7 +2,9 @@ project(M2NFixBnd)
 cmake_minimum_required(VERSION 2.8)
 enable_language(Fortran)
 
+if(NOT PHASTA_SKIP_MPI_CHECK)
 find_package(MPI REQUIRED)
+endif()
 
 include_directories(${CMAKE_CURRENT_BINARY_DIR})
 include(FortranCInterface)
