--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -75,7 +75,11 @@ SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY
 OPTION(PHASTA_USE_MPI "Build MPI components" ON)
 IF(PHASTA_USE_MPI)
   ADD_DEFINITIONS( -DPARALLEL -DMPICH_SKIP_MPICXX -DOMPI_SKIP_MPICXX )
+  option(PHASTA_SKIP_MPI_CHECK "Bypass CMake MPI code. Don't use this" OFF)
+  mark_as_advanced(FORCE PHASTA_SKIP_MPI_CHECK)
+  if(NOT PHASTA_SKIP_MPI_CHECK)
   FIND_PACKAGE(MPI REQUIRED)
+  endif()
 #  SET(CMAKE_MODULE_PATH ${PHASTA_SOURCE_DIR}/CMakeFiles)
   # bug in FIND_PACKAGE for Threads -- ignore for now (bug has been reported)...
   FIND_PACKAGE(Threads)
